--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,3 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+.poppins {
+    font-family: "Poppins", sans-serif;
+}
+body {
+    font-family: "Montserrat", sans-serif;
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.swiper-button-next {
+    color: #D9D9D9 !important;
+}
+.swiper-button-prev {
+    color: #D9D9D9 !important;
+}
+.swiper-pagination-bullet-active {
+    background-color: #D9D9D9 !important;
+}
+.swiper-button-next:after,
+.swiper-button-prev:after {
+    font-size: 15px !important;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #D9D9D9 ;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
