--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -72,6 +72,8 @@ body {
         font-size: 15px !important;
         min-width: 30px;
         height: 30px;
+        display: none;
+
     }
 }
 .main-carousel .swiper-backface-hidden .swiper-slide {
@@ -135,3 +137,30 @@ body {
     display: none;
 }
 
+
+
+.modal-camp .mui-j2da1h {
+    padding-top: 0 !important;
+}
+
+
+
+.date-cars .mui-z3c6am-MuiFormControl-root-MuiTextField-root {
+    width: 200px !important;
+}
+
+.swiper-car  .swiper-pagination-bullet {
+    width: 14px !important;
+    height: 5px !important;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    background-color: #D9D9D9;
+}
+
+.swiper-car .swiper-pagination-bullet-active {
+    width: 40px !important;
+    background-color: #1E1E1E;
+}
